--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Curso de asincronismo en JavaScript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d src"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,6 @@
   "homepage": "https://github.com/Juan2742/async-landing#readme",
   "dependencies": {
     "node-fetch": "^3.3.1"
-  }
+  },
   "type": "module"
 }
